--- a/web design for Bilbic website/BILBIC 2.html
+++ b/web design for Bilbic website/BILBIC 2.html
@@ -17,11 +17,11 @@
 
 </style>
 <body>
-    <div class="content"><img src="img/Head-1.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
-    <div class="content"><img src="img/Frame 90.png1.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
-    <div class="content"><img src="img/Frame 90.png2.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
-    <div class="content"><img src="img/Frame 90.png3.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
-    <div class="content"><img src="img/Footer.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
+    <div class="content"><img src="component img/Head-1.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
+    <div class="content"><img src="component img/Frame 90.png1.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
+    <div class="content"><img src="component img/Frame 90.png2.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
+    <div class="content"><img src="component img/Frame 90.png3.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
+    <div class="content"><img src="component img/Footer.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
     </div>
 </body>
 </html>
