--- a/web design for Bilbic website/BILBIC.html
+++ b/web design for Bilbic website/BILBIC.html
@@ -17,15 +17,15 @@
 
 </style>
 <body>
-    <div class="content"><img src="img/Head-1.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
+    <div class="content"><img src="component img/Head-1.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
     </div>
-    <div class="content"><img src="img/Frame 89.png 1.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
+    <div class="content"><img src="component img/Frame 89.png 1.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
     </div>
-    <div class="content"><img src="img/Frame 89.png2.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
+    <div class="content"><img src="component img/Frame 89.png2.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
     </div>
-    <div class="content"><img src="img/Frame 89.png3.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
+    <div class="content"><img src="component img/Frame 89.png3.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
     </div>
-    <div class="content"><img src="img/Footer.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
+    <div class="content"><img src="component img/Footer.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;padding-bottom: 20px;">
     </div>
 </body>
 </html>
